--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,6 @@ body {
   border-radius: 25px;
   width: 100%;
   margin: auto;
-  margin-top: 50px;
   padding: 10px;
 }
 
@@ -39,6 +38,14 @@ body {
   font-weight: bold;
   margin-top: 15px;
   text-decoration: underline;
+}
+
+#error {
+  width: 100%;
+  color: red;
+  display: none;
+  text-align: center;
+  margin-top: 10px;
 }
 
 .container {
